Kubeasz/ingress-nginx/example/03/backendapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-svc
  namespace: learn-ingress
  labels:
    app: backend-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: backendapi
  sessionAffinity: None
