Kubeasz/ingress-nginx/example/03/backendapi-redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: backend-api-ingress
  namespace: learn-ingress
spec:
  rules:
  - host: redirect.linux.io
    http:
      paths:
      - backend:
          service:
            name: backend-api-svc
            port:
              number: 80
        path: /api-a(/|$)(.*)
        pathType: ImplementationSpecific
